syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

message CreateGroupInvitationRequest {
    int64 group_id = 1;
    int64 invitee_id = 2;
    string content = 3;
}