syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message DeleteGroupMemberRequest {
    int64 group_id = 1;
    int64 group_member_id = 2;
    google.protobuf.Int64Value successor_id = 3;
    google.protobuf.BoolValue quit_after_transfer = 4;
}